--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -19,7 +19,8 @@
     margin-top: 30px;
     margin-bottom: 15px;
     text-align:center;
-    align-items:center;
+/*     align-items:center; */
+    vertical-alig:center;
     min-height:300px;
 }
 .tim-title>h4{
