--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -20,7 +20,7 @@
     margin-bottom: 15px;
     text-align:center;
 /*     align-items:center; */
-    vertical-alig:center;
+    vertical-align:center;
     min-height:300px;
 }
 .tim-title>h4{
