--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -393,30 +393,59 @@
 .blurred-container .motto .no-right-border{
     border-right: none;
 }
-
-#perma-vid{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height:700px;
+/*.resp-container{
+    position:relative;
+    overflow: hidden;
+    padding-top: 56.25%;
 }
-#perma-text{
+.resp-iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+*/
+.col-container{
+  display:table;
+}
+.col-vid{
+    display:table-cell;
+    width:50%;
+    vertical-align: middle;
+    text-align: center;
+}
+.col-text{
+    display: table-cell;
+    width:50%;
     color:white;
-    display: flex;
-    align-items: center; 
-    justify-content: center;
-    height:700px;
+    text-align: center;
+
+    /*align-items: center; width:100%;
+    justify-content: center;*/
+   /* height:700px;*/
+}
+.iframe-wrap{
+    overflow: hidden;
+    padding-top: 56.25%;/*set's height of container at 16:9 - iframe will resize and keep aspect ratio*/
+    position: relative;
+}
+.resp-iframe{
+    border: 0;
+    height: 75%;
+    left: 12.5%;
+    position: absolute;
+    top: 12.5%;
+    width: 75%;
 }
 @media (max-width: 768px){
     .blurred-container .motto{
         font-size: 50px;
         width:100%;
         text-align: center;
-        /*width: 268px;
-        top: 130px;*/
-    }
 
-}
+    }
 .main{
     background-color: #FFFFFF;
     position: relative;
@@ -429,24 +458,22 @@
     display: inline-block;
     margin-bottom: 25px;
 }
-  .column {
+  .col-vid, .col-text {
+    display:block;
     width: 100%;
   }
+
+
 @media (max-width: 768px){
-    h1{
-        font-size: 30px;
-        width:100%;
-        text-align: center;
-    }
-@media (max-width: 768px){
-    #perma-vid{
+/*    #perma-vid{
     display: flex;
     align-items: center;
     justify-content: center;
     height:100%;
-    padding-top:30px;
+    width:100;
+    padding-top:30px;*/
     }
-    #perma-text{
+    #col-text{
         height:100%;
     }
 h1{
