--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -333,8 +333,8 @@
 }
 .blurred-container > .img-src{
     position:fixed;
-    width:100%;
-    height:100%;
+    width:100vw;
+    height:100vh;
     background-repeat:no-repeat;
     background-size:cover;
     background-position: center center;
