--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -1,3 +1,11 @@
+body{
+    background: url('assets/img/cover_6.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 .tim-container{
     position:relative;
     background: #ffffff;
@@ -64,7 +72,9 @@
     background-attachment: fixed;
 }
 .main{
-
+    display:flex;
+    justify-content: center;
+    align-items: center;
     background-color: #FFFFFF;
 }
 .navigation-example{
@@ -333,11 +343,12 @@
 }
 .blurred-container > .img-src{
     position:fixed;
-    width:100vw;
+    width:100%;
     height:100vh;
     background-repeat:no-repeat;
     background-size:cover;
     background-position: center center;
+    z-index: -1;
 }
 .blur{
   opacity:0;
@@ -393,20 +404,6 @@
 .blurred-container .motto .no-right-border{
     border-right: none;
 }
-/*.resp-container{
-    position:relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-}
-.resp-iframe{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
-}
-*/
 .col-container{
   display:table;
 }
@@ -418,13 +415,12 @@
 }
 .col-text{
     display: table-cell;
-    width:50%;
+    width:35%;
     color:white;
     text-align: center;
-
-    /*align-items: center; width:100%;
-    justify-content: center;*/
-   /* height:700px;*/
+}
+p{
+    line-height: 1.6;
 }
 .iframe-wrap{
     overflow: hidden;
@@ -433,11 +429,11 @@
 }
 .resp-iframe{
     border: 0;
-    height: 75%;
-    left: 12.5%;
+    height: 60%;
+    left: 20%;
     position: absolute;
-    top: 12.5%;
-    width: 75%;
+    top: 20%;
+    width: 60%;
 }
 @media (max-width: 768px){
     .blurred-container .motto{
@@ -462,17 +458,12 @@
     display:block;
     width: 100%;
   }
-
-
-@media (max-width: 768px){
-/*    #perma-vid{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height:100%;
-    width:100;
-    padding-top:30px;*/
-    }
+.resp-iframe{
+    height: 75%;
+    left: 12.5%;
+    top: 12.5%;
+    width: 75%;
+}
     #col-text{
         height:100%;
     }
@@ -483,4 +474,5 @@ h1{
     }
 #navbar-full {
     height:30rem;
+}
 }
