--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -1,11 +1,3 @@
-body{
-    background: url('assets/img/cover_6.jpg') no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
 .tim-container{
     position:relative;
     background: #ffffff;
@@ -346,6 +338,9 @@ body{
     width:100%;
     height:100vh;
     background-repeat:no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size:cover;
     background-position: center center;
     z-index: -1;
@@ -405,7 +400,11 @@ body{
     border-right: none;
 }
 .col-container{
-  display:table;
+    padding-top: 5em;
+    padding-bottom:5em;
+    margin-right:50px;
+    margin-left:50px;
+    display:table;
 }
 .col-vid{
     display:table-cell;
