--- a/assets/css/gsdk.css
+++ b/assets/css/gsdk.css
@@ -1384,7 +1384,7 @@ input.ct-red + span + label + span.switch-right {
   background-color: rgba(76, 217, 100, 0.98); }
 
 .navbar-ct-orange {
-  background-color: rgba(255, 149, 0, 0.98); }
+  background-color: #F05F44; }
 
 .navbar-ct-red {
   background-color: rgba(255, 76, 64, 0.98); }
